--- a/bio.html
+++ b/bio.html
@@ -18,34 +18,35 @@
       <div class="container">
         <img src="me2.jpg" width="230cm" height="320cm"/>
         <h2>Hi, I'm Luis</h2>
-        <p> I'm a Civil Engineer graduated from the University of Guanajuato (UG) in Guanajuato, Guanajuato, México. 
+        <p> I'm a Civil Engineer graduated from the University of Guanajuato <a href="https://www3.ugto.mx/en/"> (UG) </a> in Guanajuato, Guanajuato, México. 
             During those studies I participated in a couple of 
-            international academic programs at Northeastern Illinois University (NEIU), USA - in 2015, and at
-            Chalmers University of Technology, Sweden - in 2017, to enhance my capabilities exploring other
-            scientific and engineering areas, places and ideas, by taking both undergraduate and graduated
+            international academic programs at Northeastern Illinois University <a href="https://www.neiu.edu/"> (NEIU) </a>, USA as an undergraduate student - in 2015, and at
+            <a href="https://www.chalmers.se/en/"> Chalmers University of Technology</a>, Sweden as a graduate student - in 2017, to enhance my capabilities exploring other
+            scientific and engineering areas, places and ideas, by taking
             courses related to stochastic processes, stochastic optimization algorithms, The Finite Element Method 
             and Structural design. In 2019 I obtained my Bachelor Degree in Civil Engineering with a Thesis work about optimization
             design of reinforcing steel for concrete columns through an original mathematical numerical approach developed at
-            the Aula CIMNE-UG. <br></br>
+            the <a href="http://aulas.cimne.com/1136">Aula CIMNE-UG</a></h2>
+            <br></br>
 
-            Later, in 2020, my professional carrer and research continued during my Master's program in Science
-            of Structures at the Autonomous University of Queretaro, in which I could learn a lot more in the area of 
+            Later, in 2020, my professional carrer and research continued with a Master's program in Science
+            of Structures at the Autonomous University of Queretaro <a href="https://www.uaq.mx/index.php"> (UAQ)</a>, in which I could learn a lot more in the area of 
             computaitonal mechanics, numerical methods, engineering software development and optimal/sustainable design
             of civil infrastructure projects and structures, mainly of reinforced concrete.  In 2022 I obtained my Degree
             in Master of Science (Structures). It was during these studies when
             I realized that I wanted to do Research for the rest of my life, and from this point on my carrer was divided
-            into two paths: research and industry.<br><br>
+            into two main paths: research and industry.<br><br>
         </p>
         <h3>Research</h3>
         <p>
-            Right after my Master's studies at the Autonomous University of Queretaro I went to the CIMAT (Centro de
+            Right after my Master's studies at the Autonomous University of Queretaro I went to the <a href="https://www.cimat.mx/">CIMAT</a> (Centro de
             de Investigación en Matemáticas - Research Center in Mathematics) in Guanajuato city, Mexico, to continue my carrer path in the Graduate Department of
             Computational Science by learning more about Prorgramming, Algorithms, Parallel Computing, Numerical methods and Data Science. During these studies I could develop a research work
             related to optimization algorithms based on Combinatorial-Mathematics for the design of asymmetrical rebar in rectangular columns, which then led to additional research 
             works related to optimization design of Irregular reinforced concrete <br><br>
 
-            In 2023 I was accepted at the Hong Kong University of Science and Technology (HKUST) for my PhD studies in Civil Engineering
-            with focus in Scientific Computation. A great journey awaits for me in the area of Artiicial Intelligence and Numerical modelling for 
+            In 2023 I was accepted at the Hong Kong University of Science and Technology <a href="https://hkust.edu.hk/">(HKUST)</a> for my PhD studies in Civil Engineering
+            with focus in Scientific Computation. Here at the HKUST I focus in the area of Machine Learning, Structural Reliability and Numerical modelling for 
             structural design and optimization.
 
         </p>
@@ -55,7 +56,7 @@
           in the private industry along with my father and my brother as a company. We perform structural designs, topographyc surveys, construction plans and budgets. 
           <br>
           <br>
-          I usually come across with very interesting ideas by doing these wort of works. Thus, it is vital for me now to always be linked to the industrial sector 
+          I usually come across with very interesting ideas by doing these sort of works. Thus, it is vital for me now to always be linked to the industrial sector 
           somehow to enhance my research topics and scope. 
         </p>
       </div>
