--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
             the <a href="http://aulas.cimne.com/1136">Aula CIMNE-UG</a></h2>
             <br></br>
 
-            Later, in 2020, my professional carrer and research continued with a Master's program in Science
+            Later, in 2020, my professional carreer and research continued with a Master's program in Science
             of Structures at the Autonomous University of Queretaro <a href="https://www.uaq.mx/index.php"> (UAQ)</a>, in which I could learn a lot more in the area of 
             computaitonal mechanics, numerical methods, engineering software development and optimal/sustainable design
             of civil infrastructure projects and structures, mainly of reinforced concrete.  In 2022 I obtained my Degree
@@ -43,7 +43,7 @@
             de Investigación en Matemáticas - Research Center in Mathematics) in Guanajuato city, Mexico, to continue my carrer path in the Graduate Department of
             Computational Science by learning more about Prorgramming, Algorithms, Parallel Computing, Numerical methods and Data Science. During these studies I could develop a research work
             related to optimization algorithms based on Combinatorial-Mathematics for the design of asymmetrical rebar in rectangular columns, which then led to additional research 
-            works related to optimization design of Irregular reinforced concrete <br><br>
+            works related to optimization design of Irregular reinforced concrete buildings. <br><br>
 
             In 2023 I was accepted at the Hong Kong University of Science and Technology <a href="https://hkust.edu.hk/">(HKUST)</a> for my PhD studies in Civil Engineering
             with focus in Scientific Computation. Here at the HKUST I focus in the area of Machine Learning, Structural Reliability and Numerical modelling for 
