--- a/bio.html
+++ b/bio.html
@@ -18,10 +18,10 @@
       <div class="container">
         <img src="me2.jpg" width="230cm" height="320cm"/>
         <h2>Hi, I'm Luis</h2>
-        <p> I'm a Civil Engineer graduated from the University of Guanajuato <a href="https://www3.ugto.mx/en/"> (UG) </a> in Guanajuato, Guanajuato, México,
-          curretly doing my PhD studies in Civil Engineering with focus on Scientific Computation at the Hong Kong University of Science and Technology <a href="https://hkust.edu.hk/">(HKUST)</a>. 
+        <p> I'm a Civil Engineer graduated from the University of Guanajuato <a href="https://www3.ugto.mx/en/"> (UG) </a> in Guanajuato, Guanajuato, México. I'm
+          curretly a PhD student in Civil Engineering with focus on Scientific Computation at the Hong Kong University of Science and Technology <a href="https://hkust.edu.hk/">(HKUST)</a>. 
             <h3>Early years as Bachelor and Masters student in Civil Engineering</h3>
-            Those were in total six challenging and full-time years as an undergraduate student I had to udergo to obtain my degree of Civil Engineer with focus on Structural Engineering. 
+            Those were in total six full-time challenging years as an undergraduate student I had to udergo to obtain my degree of Civil Engineer with focus on Structural Engineering. 
             Nonetheless, what a great journey it was, not only in Mexico, but overseas as well, in top institutions. During those studies I participated in a couple of 
             international academic programs: in 2015 at Northeastern Illinois University <a href="https://www.neiu.edu/"> (NEIU) </a>, USA, at an undergraduate level, later, in 2017, at
             <a href="https://www.chalmers.se/en/"> Chalmers University of Technology</a>, Sweden at a graduate level, to enhance my capabilities exploring other
