--- a/bio.html
+++ b/bio.html
@@ -28,7 +28,7 @@
             scientific and engineering areas, places and ideas. Topics such as Stochastic processes, Stochastic optimization algorithms, The Finite Element Method 
             and Structural design were of the most relevant in these programs. In 2019 I obtained the degree of Civil Engineer with focus on Structural Engineering, with the publication of a thesis work about optimization
             design of reinforcing steel for concrete columns through an original mathematical numerical approach developed at
-            the <a href="http://aulas.cimne.com/1136">Aula CIMNE-UG</a></h2>
+            the <a href="https://aulas.cimne.com/aula/aula-ugto/">Aula CIMNE-UG</a></h2>
             <br></br>
 
             <h3>Early years in research as a Masters student in Structural Engineering</h3>
